[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://objects/Melee.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Guard.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Fort.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/button.png" type="Texture" id=6]
[ext_resource path="res://assets/buttonHold.png" type="Texture" id=7]
[ext_resource path="res://assets/coolvetica rg.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/sel.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

size = 15
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 17
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 17
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 23
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="TileMap" index="0"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 1 )
_sections_unfolded = [ "Cell", "Occluder", "Transform" ]
Melee = ExtResource( 2 )
Guard = ExtResource( 3 )
Fort = ExtResource( 4 )
Wall = ExtResource( 5 )
walls = [  ]

[node name="Pass turn" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 740.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="Pass turn" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_right = 199.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "PASS TURN"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 1280, 0 )
z_index = 1
texture = ExtResource( 9 )
offset = Vector2( 32, 32 )
_sections_unfolded = [ "Offset", "Visibility", "Z Index" ]

[node name="Options" type="Node2D" parent="Sprite" index="0"]

position = Vector2( 64, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Soldier" type="TextureButton" parent="Sprite/Options" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 202.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Sprite/Options/Soldier" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -2.0
margin_right = 226.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Create Soldier"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Cancel" type="TextureButton" parent="Sprite/Options" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -22.0
margin_right = 202.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Sprite/Options/Cancel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -2.0
margin_right = 226.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cancel"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Guard" type="TextureButton" parent="Sprite/Options" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 22.0
margin_right = 202.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Sprite/Options/Guard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -1.0
margin_right = 226.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Create Guard"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Fort" type="TextureButton" parent="Sprite/Options" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 44.0
margin_right = 202.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Sprite/Options/Fort" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -1.0
margin_right = 80.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Create fort"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="Turn" type="Label" parent="." index="2"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 541.0
margin_top = 24.0
margin_right = 739.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player 0's turn"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="P0" type="Label" parent="." index="3"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 500.0
margin_right = 540.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="P1" type="Label" parent="." index="4"]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 740.0
margin_right = 780.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[connection signal="pressed" from="Pass turn" to="." method="_on_Pass_turn_pressed"]

[connection signal="pressed" from="Sprite/Options/Soldier" to="." method="_on_Guard_pressed"]

[connection signal="pressed" from="Sprite/Options/Cancel" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="Sprite/Options/Guard" to="." method="_on_RealGuard_pressed"]

[connection signal="pressed" from="Sprite/Options/Fort" to="." method="_on_Fort_pressed"]


